build(Loan Project): реализовать функционал загрузки файлов

--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
           <div class="showup__intro">
             <div class="title">bring<span>it</span>up</div>
             <div class="subtitle">We can give you an education that you need</div>
-            <button class="btn">Get free access</button>
+            <button class="btn"><a href="modules.html">Get free access</a></button>
           </div>
           <div class="showup__video">
             <div class="showup__author">
